--- a/src/temp.html
+++ b/src/temp.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>First Webpack</title>
-  <script defer src="main.8fac68f8850c6d13d264.js"></script></head>
+    <title><%= htmlWebpackPlugin.options.title %></title>
+  </head>
   <body>
-    <h1>First Webpack</h1>
+    <h1><%= htmlWebpackPlugin.options.title %></h1>
   </body>
 </html>
